--- a/client/package.json
+++ b/client/package.json
@@ -36,7 +36,9 @@
     "webpack-dev-server": "^3.8.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --mode production",
+    "start": "webpack-dev-server --mode development --open"
   },
   "keywords": [],
   "author": "",
