--- a/client/package.json
+++ b/client/package.json
@@ -2,9 +2,10 @@
   "name": "client",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "webpack.config.js",
   "dependencies": {
     "axios": "^0.19.0",
+    "babel-core": "^6.26.3",
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.3.1",
     "history": "^4.9.0",
@@ -15,21 +16,23 @@
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "^3.1.1",
-    "redux": "^4.0.4"
+    "redux": "^4.0.4",
+    "superagent": "^5.1.0",
+    "superagent-promise": "^1.1.0"
   },
   "devDependencies": {
     "babel": "^6.23.0",
-    "babel-loader": "^8.0.6",
+    "babel-loader": "^7.1.4",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
-    "css-loader": "^3.2.0",
+    "css-loader": "^0.28.11",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^4.2.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.12.0",
-    "sass-loader": "^7.3.1",
+    "sass-loader": "^7.0.1",
     "style-loader": "^1.0.0",
     "webpack": "^4.39.2",
     "webpack-cli": "^3.3.7",
