--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "simpblog",
+  "name": "simpBlog",
   "version": "1.0.0",
   "description": "Creating a simple blog using the MERN stack for practice.",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "client": "cd client && npm start",
+    "server": "cd server && npm start",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "repository": {
     "type": "git",
@@ -19,14 +21,6 @@
   },
   "homepage": "https://github.com/birnapwnsu/simpBlog#readme",
   "dependencies": {
-    "body-parser": "^1.19.0",
-    "cors": "^2.8.5",
-    "dotenv": "^8.1.0",
-    "errorhandler": "^1.5.1",
-    "express": "^4.17.1",
-    "express-session": "^1.16.2",
-    "mongoose": "^5.6.10",
-    "morgan": "^1.9.1",
-    "path": "^0.12.7"
+    "concurrently": "^4.1.2"
   }
 }
